# stock_analysis_by_gpt

./: .gitignore  BATCH_SAVE_FEATURE.md  BATCH_SAVE_GUIDE.md  DATABASE_GUIDE.md  DB_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUANT_SYSTEM_OVERALL_DESIGN.drawio  QUANT_SYSTEM_OVERALL_DESIGN.md  QUICKSTART.md  README.md  TECHNICAL_DEEP_DIVE.md  TEST_RESULTS.md  analyzer_core.py  backtest.py  chart_plotter.py  check_db.py  data_display.py  data_fetcher.py  data_saver.py  db_manager.py  fast_scan.py  final_report.py  get_hk_stock.py  indicators.py  main.py  pyproject.toml  reporting.py  requirements.txt  scan_fullmarket.py  stock_analyzer.py  sync_hk_market.py  test_async.py  test_cn_stock.py  test_duckdb.py  test_hk_corporate_actions.py  test_hk_stock.py  test_scan.py  test_scan_optimization.py  (+2 more)
.claude/: settings.local.json
assets/: stock_data.duckdb.wal
backtest_engine/: __init__.py  broker.py  engine.py  models.py  portfolio.py
data/: __init__.py
factor_engine/: __init__.py  base.py  context.py  registry.py
factor_validation/: __init__.py  validator.py
scripts/: ima_env.sh
strategy/: __init__.py  base.py  bottom_volume_reversal.py  bullish_impulse_cyc.py  bullish_trend_2560.py  current_strategy.py  registry.py  sell_rules.py  trend_pullback_rebound.py  trend_range_band.py
test/: quick_test.py  simple_test.py  test_adjustments.py  test_backtest_engine.py  test_data_layer_smoke.py  test_factor_engine.py  test_factor_validation.py  test_feature_store.py  test_features.py  test_hk_bulk_sync_smoke.py  (+14 more)
(+41229 files in other folders)
